--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         const sounds = [
             { file: 'sound1.mp3', label: 'INTERVIEW' },
             { file: 'sound2.mp3', label: 'GREAT TOOLS' },
-            { file: 'sound3.mp3', label: 'Lepricaun' },
-            { file: 'sound4.mp3', label: 'Lepricaun' },
+            { file: 'sound7.mp3', label: 'GOLD' },
+            { file: 'sound4.mp3', label: 'SAY YA' },
             { file: 'sound5.mp3', label: 'WRONG STUFF' },
             { file: 'sound6.mp3', label: 'CRACKHEAD' }
         
