--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soundboard</title>
+    <title>Where da Gold at</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -12,7 +12,7 @@
         .grid {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 5px;
+            gap: 10px;
             max-width: 600px;
             margin: 20px auto;
         }
@@ -32,7 +32,7 @@
 </head>
 <body>
 
-    <h1>Soundboard</h1>
+    <h1>WHERE DA GOLD AT</h1>
     <div class="grid" id="soundboard"></div>
 
     <script>
@@ -40,7 +40,7 @@
             { file: 'sound1.mp3', label: 'INTERVIEW' },
             { file: 'sound2.mp3', label: 'GREAT TOOLS' },
             { file: 'sound7.mp3', label: 'GOLD' },
-            { file: 'sound4.mp3', label: 'SAY YA' },
+            { file: 'sound4.mp3', label: 'LEPRECHAUN' },
             { file: 'sound5.mp3', label: 'WRONG STUFF' },
             { file: 'sound6.mp3', label: 'CRACKHEAD' }
         
@@ -69,5 +69,8 @@
         });
     </script>
 
+    <div>
+        <img src="LEP.PNG" alt="">
+    </div>
 </body>
 </html>
