--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
 
     <script>
         const sounds = [
-            { file: 'sound1.mp3', label: 'INTERVIEW' },
-            { file: 'sound2.mp3', label: 'GREAT TOOLS' },
-            { file: 'sound7.mp3', label: 'GOLD' },
+         
+            { file: 'sound7.mp3', label: 'WHERE DA GOLD' },
             { file: 'sound4.mp3', label: 'LEPRECHAUN' },
             { file: 'sound5.mp3', label: 'WRONG STUFF' },
             { file: 'sound6.mp3', label: 'CRACKHEAD' }
