--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
          
             { file: 'sound7.mp3', label: 'WHERE DA GOLD' },
             { file: 'sound4.mp3', label: 'LEPRECHAUN' },
-            { file: 'sound5.mp3', label: 'WRONG STUFF' },
+            { file: 'sound8.mp3', label: 'FLUET' },
             { file: 'sound6.mp3', label: 'CRACKHEAD' }
         
         ];
