--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         const sounds = [
          
             { file: 'sound7.mp3', label: 'WHERE DA GOLD' },
-            { file: 'sound4.mp3', label: 'LEPRECHAUN' },
+            { file: 'sound4.mp3', label: 'SAY YA' },
             { file: 'sound8.mp3', label: 'FLUET' },
             { file: 'sound6.mp3', label: 'CRACKHEAD' }
         
