--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
+            background-color: #125715;
         }
         .grid {
             display: grid;
