--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
             text-align: center;
             background-color: #125715;
         }
+
+        h1 {
+            font-size: 8px;
+        }
+        
         .grid {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
