--- a/index.html
+++ b/index.html
@@ -45,10 +45,15 @@
     <script>
         const sounds = [
          
-            { file: 'sound7.mp3', label: 'WHERE DA GOLD' },
-            { file: 'sound4.mp3', label: 'SAY YA' },
+              { file: 'sound7.mp3', label: 'GOLD' },
+            { file: 'sound4.mp3', label: 'LEPRECHAUN' },
             { file: 'sound8.mp3', label: 'FLUET' },
-            { file: 'sound6.mp3', label: 'CRACKHEAD' }
+            { file: 'sound6.mp3', label: 'CRACKHEAD' },
+            { file: 'sound1.mp3', label: 'CUSTOMER SERVICE' },
+            { file: 'sound2.mp3', label: 'TOOLS' },
+            { file: 'sound10.mp3', label: 'WHISTLE TIPS' },
+            { file: 'sound11.mp3', label: 'WOO WOO' },
+            { file: 'sound12.mp3', label: 'DECORATION' },
         
         ];
 
