--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
             { file: 'sound10.mp3', label: 'WHISTLE TIPS' },
             { file: 'sound11.mp3', label: 'WOO WOO' },
             { file: 'sound12.mp3', label: 'DECORATION' },
+            { file: 'sound2.mp3', label: 'TOOLS' },
+            { file: 'sound14.mp3', label: 'WHISTLE TIPS' },
+            { file: 'sound15.mp3', label: 'WOO WOO' },
+            { file: 'sound16.mp3', label: 'DECORATION' },
+            { file: 'sound17.mp3', label: 'DECORATION' }
         
         ];
 
