--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             { file: 'sound11.mp3', label: 'WOO WOO' },
             { file: 'sound12.mp3', label: 'DECORATION' },
             
-            { file: 'sound14.mp3', label: 'WHISTLE TIPS' },
-            { file: 'sound15.mp3', label: 'WOO WOO' },
-            { file: 'sound16.mp3', label: 'DECORATION' },
-            { file: 'sound17.mp3', label: 'DECORATION' }
+            { file: 'sound14.mp3', label: 'COLD POP' },
+            { file: 'sound15.mp3', label: 'ITS A FIRE' },
+            { file: 'sound16.mp3', label: 'AINT NOBODY' },
+            { file: 'sound17.mp3', label: 'BRONCHITIS' }
         
         ];
 
