--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             { file: 'sound4.mp3', label: 'LEPRECHAUN' },
             { file: 'sound8.mp3', label: 'FLUET' },
             { file: 'sound6.mp3', label: 'CRACKHEAD' },
-            
+
+            { file: 'do it.mp3', label: 'DO IT' },
             { file: 'sound2.mp3', label: 'TOOLS' },
             { file: 'sound10.mp3', label: 'WHISTLE TIPS' },
             { file: 'sound11.mp3', label: 'WOO WOO' },
