--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             { file: 'sound6.mp3', label: 'CRACKHEAD' },
 
             { file: 'hobnail.mp3', label: 'Hobnail Boot' },
+            { file: 'crushedface.mp3', label: 'Crushed Face' },
 
             
             { file: 'do it.mp3', label: 'DO IT' },
