--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             { file: 'sound8.mp3', label: 'FLUET' },
             { file: 'sound6.mp3', label: 'CRACKHEAD' },
 
-            { file: 'hobnail.mp3', label: 'Hobnail Boot' },
-            { file: 'crushedface.mp3', label: 'Crushed Face' },
+            { file: 'hobnail.mp3', label: 'HOBNAIL BOOT' },
+            { file: 'crushedface.mp3', label: 'CRUSHED FACE' },
 
             
             { file: 'do it.mp3', label: 'DO IT' },
