--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             { file: 'sound4.mp3', label: 'LEPRECHAUN' },
             { file: 'sound8.mp3', label: 'FLUET' },
             { file: 'sound6.mp3', label: 'CRACKHEAD' },
-
+            { file: 'valdimir.mp3', label: 'THANKS VLAD' },
             { file: 'hobnail.mp3', label: 'HOBNAIL BOOT' },
             { file: 'crushedface.mp3', label: 'CRUSHED FACE' },
 
@@ -128,3 +128,4 @@
     </div>
 </body>
 </html>
+
